--- a/RealestateApiServer/src/main/resources/application.properties
+++ b/RealestateApiServer/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=RealestateApiServer
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/realestate_db?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=Ashking@123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
 
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
